syntax = "proto3";

package finances.budget;

import "category/category.proto";

service BudgetService {
  rpc create()

}

message Budget {
  int32 id = 1;
  string name = 2;
  string startDate = 3;
  string endDate = 4;
  int32 amount  = 5;
  int32 spent = 6;
  bool repeat = 7;
  bool active = 8;
  int32 percentage = 9;
  Category category = 10;
}

message CreateBudget {
  string name = 1;
  int32 amount = 4;
  int32 category = 5;
  bool repeat = 6;
  bool active = 7;


}
